fix: Increase Top Space from Overlaping

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -116,7 +116,7 @@
 
   display: block;
 
-  margin-top: 5em;
+  margin-top: 10em;
   background: var(--body-background-color);
 
   box-shadow: var(--shadow-top);
